--- a/kermaxdevutils/src/main/res/values/strings.xml
+++ b/kermaxdevutils/src/main/res/values/strings.xml
@@ -1,1 +1,5 @@
-<resources></resources>
+<resources>
+    <string name="text_button_close">Close</string>
+    <string name="text_button_update">Update</string>
+    <string name="text_star">*</string>
+</resources>
